QA: Refactor Code with SonarQube